fixed overflow-x bug

--- a/mediaquery.css
+++ b/mediaquery.css
@@ -30,6 +30,10 @@
         width: 300%;
     }
 
+    nav ul{
+        width: auto;
+        float: none;
+    }
 
     nav a {
         font-size: 18px !important;
@@ -39,9 +43,7 @@
         font-size: 24px;
     }
 
-    #aboutSection {
-        overflow: auto;
-    }
+
 
 }
 
@@ -121,6 +123,7 @@
 
     .aboutMeText {
         text-align: center;
+
     }
 
     .purdueEducationAbout {
@@ -150,7 +153,7 @@
         height: 400px !important;
     }
 
-    #aboutSection, #educationSection, #projectsSection, #skillsSection, #contactSection {
+    #aboutSection, #educationSection, #projectsSection {
         padding: 2rem;
     }
 
@@ -180,6 +183,13 @@
         align-items: center;
     }
 
+    nav.black {
+        width: fit-content;
+    }
+
+    body,html {
+        width: 100%;
+    }
 
 
 
